<resources>
    <string name="app_name">MiProyecto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tituloMenu">Diarios y noticias de España</string>
    <string name="correoUsuario">correo@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Diarios de España</string>
    <string name="menu_gallery">Noticias en vivo</string>
    <string name="menu_slideshow">Configuración</string>
    <string name="menu_acerca">Sobre nosotros</string>
    <string name="texto_pantalla_principal">Diarios y noticias de España</string>
    <string name="diarios">Diarios de España</string>
    <string name="noticias">Noticias de España</string>
    <string name="filtrado_noticia">Filtrar noticias</string>
    <string name="favoritos">Favoritos</string>
    <string name="configuracion">Configuración</string>
    <string name="acerca">Acerca de</string>

    <string name="appbar_scrolling_view_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="welcome_news_title">Novedades</string>
    <string name="welcome_news_next">Siguiente</string>
    <string name="generales"><h1>Generales</h1></string>
    <string name="regionales"><h1>Regionales</h1></string>
    <string name="economia"><h1>Economía y política</h1></string>
    <string name="deportes"><h1>Deportes</h1></string>
    <string name="tecnologia"><h1>Tecnología</h1></string>
    <string name="celebridades"><h1>Celebridades</h1></string>
    <string name="moda"><h1>Moda</h1></string>


    <string name="title_activity_detalles">Detalles</string>
    <!-- String utilizadas para fragmentos de navegación -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="titulo">Titulo de noticia</string>
    <string name="fecha">07/10/2020</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nada">nada</string>

</resources>