<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_diarios">

    <fragment
        android:id="@+id/nav_diarios"
        android:name="com.jobeanda.miproyecto.ui.diarios.ActividadDiarios"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_diarios" />

    <fragment
        android:id="@+id/nav_noticias"
        android:name="com.jobeanda.miproyecto.ui.noticias.NoticiasFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_noticias" />

    <fragment
        android:id="@+id/nav_configuracion"
        android:name="com.jobeanda.miproyecto.ui.configuracion.ConfiguracionFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_configuracion" />
    <fragment
        android:id="@+id/nav_acerca"
        android:name="com.jobeanda.miproyecto.ui.configuracion.ConfiguracionFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_configuracion" />
</navigation>